[tool.poetry]
name = "resonest"
version = "0.1.0"
description = ""
authors = ["Will Lane <williamlane923@gmail.com>"]
packages = [{ include = "ResoNestCli" }]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pydantic = "^2.9.2"
click = "^8.1.7"
rich = "^13.9.2"

[tool.poetry.scripts]
resonest = "ResoNestCli.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
